RESOLVED FIXED303840
[blocks-in-inline] Fix fast/block/margin-collapse/block-inside-inline/002.html, -003.html and -004.html
https://bugs.webkit.org/show_bug.cgi?id=303840
Summary [blocks-in-inline] Fix fast/block/margin-collapse/block-inside-inline/002.htm...
alan
Reported 2025-12-09 07:43:58 PST
Attachments
[fast-cq]Patch (2.06 KB, patch)
2025-12-09 07:45 PST, alan
no flags
alan
Comment 1 2025-12-09 07:45:25 PST
Created attachment 477678 [details] [fast-cq]Patch
EWS
Comment 2 2025-12-09 10:40:48 PST
Committed 304170@main (b9c49c9443e7): <https://commits.webkit.org/304170@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 477678 [details].
Radar WebKit Bug Importer
Comment 3 2025-12-09 10:41:14 PST
Note You need to log in before you can comment on or make changes to this bug.