[blocks-in-inline] Fix fast/block/margin-collapse/block-inside-inline/002.html, -003.html and -004.html https://bugs.webkit.org/show_bug.cgi?id=303840

Reviewed by Antti Koivisto.

Account for margin in inline direction when computing the min/max widths for block level boxes
inside inline content.

* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::computeInlinePreferredLogicalWidths const):

Canonical link: https://commits.webkit.org/304170@main